fix: align dependencies and like response

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "next": "15.0.0-canary.36",
-    "react": "19.0.0-rc-f0d37e271b-20240507",
-    "react-dom": "19.0.0-rc-f0d37e271b-20240507",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
     "three": "^0.165.0",
     "@react-three/fiber": "^9.0.0",
     "@react-three/drei": "^9.105.6",
