--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,8 +20,8 @@
     "expo-notifications": "~0.28.6",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.0",
-    "react": "19.0.0-rc-f0d37e271b-20240507",
-    "react-dom": "19.0.0-rc-f0d37e271b-20240507",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-reanimated": "~3.10.1",
