--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "type": "module",
   "main": "src/index.ts",
+  "peerDependencies": {
+    "react": ">=18.2.0",
+    "react-native": ">=0.74.0"
+  },
   "dependencies": {
-    "react": "^19.0.0-rc",
-    "react-native": "0.74.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "@radix-ui/react-dialog": "^1.0.5"
