fix: stabilize local test environment

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -5,6 +5,7 @@ MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_BUCKET_RAW=raw-videos
 MINIO_BUCKET_ARTIFACTS=artifacts
+STORAGE_OFFLINE=false
 JWT_SECRET=change_me
 JWT_ALGORITHM=HS256
 JWT_EXPIRE_MINUTES=1440
