--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -8,7 +8,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "node ./scripts/run-tests.cjs"
   },
   "dependencies": {
     "expo": "~51.0.8",
@@ -28,7 +28,8 @@
     "react-native-safe-area-context": "4.10.3",
     "react-native-screens": "~3.31.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "buffer": "^6.0.3"
+    "buffer": "^6.0.3",
+    "@babel/runtime": "^7.24.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
@@ -38,6 +39,10 @@
     "jest": "^29.7.0",
     "@testing-library/react-native": "^12.5.2",
     "ts-jest": "^29.1.2",
-    "@testing-library/jest-native": "^5.4.3"
+    "@testing-library/jest-native": "^5.4.3",
+    "jest-expo": "~51.0.4",
+    "babel-jest": "^29.7.0",
+    "babel-preset-expo": "^11.0.0",
+    "react-test-renderer": "18.2.0"
   }
 }
